@@ -1,5 +1,7 @@
 Changes in version 1.5.1 (??.?? 2009)
 
+ - OSX device now supports shift and ctrl keys.
+
  - MD2 mesh loader: Now uses much less memory, reduced number of allocations when loading meshes.
 
 Changes in version 1.5 (15.12.2008)
